v3/crates/metadata-resolve/tests/failing/model_permissions/unknown_model/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/unknown_model/metadata.json
---
Error: unknown model used in model select permissions definition: Albums (in subgraph subgraphs)
    ╭─[ <unknown>:11:26 ]
    │
 11 │             "modelName": "Albums",
    │                          ────┬───  
    │                              ╰───── This model is not defined
────╯
